Development Portal (2018-09-21 shi)
==============================
Load original css in ctrack before scripts
Sticky headers for tables
Update all themes, including print-friendly
Minor css fixes, border-box, hover text, smaller td num font, fix 
firefox dropdown background


Development Portal (2018-09-12 shi)
==============================
Remove list numbers from participating-org
Update print-friendly css
Update SAVi body margin for q


Development Portal (2018-08-24 shi)
==============================
Fix alert colspan
Display humanitarian flag in SAVi
Update all themes
Don't display empty comments/location/dimension in results for SAVi
Update print-friendly css
Update policy-marker code to show even if vocab is not set


Development Portal (2018-08-21 shi)
==============================
Fix word-break in sector / donor tables for long names in columns
Update sector/donor tables width and layout
Update print-friendly css


Development Portal (2018-08-16 shi)
==============================
Display document-date for document-link in SAVi
Updated print-friendly css
Updated all themes with new displays
Sort document-link by date


Development Portal (2018-07-03 shi)
==============================
Fix activity list header in Generator
Display new policy marker search dropdown
Update translations and typeahead css


Development Portal (2018-06-25 shi - full)
==============================
Display location description narrative in SAVi
Display budget status in SAVi
Display participating-org type in SAVi
Update all themes with new displays


Development Portal (2018-06-11 shi)
==============================
Remove indicator numbers for results in SAVi


Development Portal (2018-05-25 shi)
==============================
Fix table (list and activity) word break


Development Portal (2018-05-16 shi)
==============================
Updated 'outgoing commitments' text in table headers and footer
Updated translation
Add policy-marker css to all themes