@@ -615,6 +615,7 @@ a.a_document-link:hover						{background-color:rgba(255,255,255,1);}
 a.a_document-link document-link span-title	{color:rgba(85,85,85,1);}
 document-link span							{color:rgba(85,85,85,1);}
 a.a_document-link span-title:after			{color:rgba(255,255,255,1); background-color:rgba(15,15,15,0.4);}
+document-link description narrative			{color:rgba(85,85,85,1);}
 span-narrative.doc-cat						{color:rgba(255,255,255,1); background-color:rgba(15,15,15,0.4);}
 span-doc_date								{color:rgba(255,255,255,1); background-color:rgba(115,115,115,1);}
 
