@@ -580,6 +580,7 @@ a.a_document-link:hover						{background-color:rgba(56,56,56,0.7);}
 a.a_document-link document-link span-title	{color:rgba(255,255,255,1);}
 document-link span							{color:rgba(204,204,204,1);}
 a.a_document-link span-title:after			{background-color:rgba(15,15,15,0.7);}
+document-link description narrative			{color:rgba(204,204,204,1);}
 span-narrative.doc-cat						{color:rgba(255,255,255,1); background-color:rgba(101,101,101,0.4);}
 span-doc_date								{color:rgba(255,255,255,1); background-color:rgba(125,93,36,1);}
 
