@@ -635,6 +635,7 @@ a.a_document-link:hover						{background-color:var(--base03_40);}
 a.a_document-link document-link span-title	{color:var(--base15);}
 document-link span							{color:var(--base14);}
 a.a_document-link span-title:after			{background-color:var(--base04_70);}
+document-link description narrative			{color:var(--base14);}
 span-narrative.doc-cat						{color:var(--base15); background-color:var(--base02_40);}
 span-doc_date								{color:var(--base15); background-color:var(--base02);}
 
