@@ -1,10 +1,16 @@
+Development Portal (2018-09-22 shi)
+==============================
+Fix firefox dropdown background
+Add description narrative to document-link in SAVi
+Update all themes, including print-friendly
+
+
 Development Portal (2018-09-21 shi)
 ==============================
 Load original css in ctrack before scripts
 Sticky headers for tables
 Update all themes, including print-friendly
-Minor css fixes, border-box, hover text, smaller td num font, fix 
-firefox dropdown background
+Minor css fixes, border-box, hover text, smaller td num font
 
 
 Development Portal (2018-09-12 shi)
